k8s/do/do-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wedding
  name: wedding-guest
  labels:
    app: wedding-guest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wedding-guest
  template:
    metadata:
      labels:
        app: wedding-guest
    spec:
      containers:
        - name: wedding-guest
          image: ghcr.io/lucascarioca/wedding-registration-guest-do:v
          ports:
            - containerPort: 80
              name: w-r-g-http
