k8s/do/do-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding-guest
  namespace: wedding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: wedding.ldkube.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wedding-guest
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: karenandlucas.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wedding-guest
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: www.karenandlucas.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: wedding-guest
                port:
                  number: 80
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - wedding.ldkube.com
        - karenandlucas.com
        - www.karenandlucas.com
      secretName: wedding-tls
